[package]
name = "test-bd"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
#libublk = "0.4"
libublk = { path = "../libublk-rs/"}

libc = "0.2"
smol = "2"
daemonize = "0.5"
env_logger = "0.11"
log = "0.4"
io-uring = "0.7"
futures = "0.3"
nix = "0.26.2"
rand = "0.8"
rand_pcg = "0.3"
clap = { version = "4", features = ["env", "derive"] }
parse-size = "1.1"
size-display = "0.1.4"