[package]
name = "test-bd"
version = "0.1.0"
edition = "2021"
authors = ["Tony Asleson <tasleson@redhat.com>"]
description = "A library and CLI tool for creating procedurally generated test block devices using ublk"
documentation = "https://docs.rs/test-bd"
homepage = "https://github.com/tasleson/test-bd"
repository = "https://github.com/tasleson/test-bd"
license = "MIT OR Apache-2.0"
keywords = ["ublk", "block-device", "testing", "storage", "userspace"]
categories = ["development-tools::testing", "hardware-support", "filesystem"]
readme = "README.md"

[lib]
name = "test_bd"
path = "src/lib.rs"

[[bin]]
name = "test-bd"
path = "src/bin/test-bd.rs"
doc = false

[[bin]]
name = "test-bd-verify"
path = "src/bin/test-bd-verify.rs"
doc = false

[dependencies]
# Core library dependencies
num = "0.4.3"
libublk = "0.4"
# For local development, uncomment the line below and comment the line above:
# libublk = { path = "../libublk-rs/"}
libc = "0.2"
smol = "2"
log = "0.4"
io-uring = "0.7"
futures = "0.3"
rand_pcg = "0.9"

# CLI binary dependencies (also available when using library)
daemonize = "0.5"
env_logger = "0.11"
nix = { version ="0.30", features = ["poll", "event"] }
rand = "0.9"
clap = { version = "4", features = ["env", "derive"] }
parse-size = "1.1"
size-display = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3"
